apps/toi-sammenstill-kandidat/mongo/mongo-dev.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: toi-sammenstill-kandidat-mongodb
  namespace: toi
spec:
  serviceName: toi-sammenstill-kandidat-mongodb
  replicas: 2
  selector:
    matchLabels:
      role: toi-sammenstill-kandidat-mongodb
  template:
    metadata:
      labels:
        role: toi-sammenstill-kandidat-mongodb
        environment: dev
        replicaset: MainRepSet
        app: toi-sammenstill-kandidat-mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongod-container
          image: mongo:5
          command:
            - "mongod"
            - "--bind_ip"
            - "0.0.0.0"
            - "--replSet"
            - "MainRepSet"
          resources:
            requests:
              cpu: 0.2
              memory: 1.25Gi
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-storage-claim
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-persistent-storage-claim
        annotations:
          volume.beta.kubernetes.io/storage-class: "ssd-storage"
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
