apps/toi-sammenstill-kandidat/mongo/mongo-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: toi-sammenstill-kandidat-mongodb
    team: toi
  name: toi-sammenstill-kandidat-mongodb
  namespace: toi
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              linkerd.io/is-control-plane: "true"
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              role: toi-sammenstill-kandidat-mongodb
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.6.0.0/15
              - 172.16.0.0/12
              - 192.168.0.0/16
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nais
          podSelector:
            matchLabels:
              app: prometheus
    - from:
        - namespaceSelector:
            matchLabels:
              name: toi
          podSelector:
            matchLabels:
              app: toi-sammenstill-kandidat
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              role: toi-sammenstill-kandidat-mongodb
    - from:
        - namespaceSelector:
            matchLabels:
              linkerd.io/is-control-plane: "true"
    - from:
        - namespaceSelector:
            matchLabels:
              linkerd.io/extension: viz
          podSelector:
            matchLabels:
              component: tap
    - from:
        - namespaceSelector:
            matchLabels:
              linkerd.io/extension: viz
          podSelector:
            matchLabels:
              component: prometheus
  podSelector:
    matchLabels:
      role: toi-sammenstill-kandidat-mongodb
  policyTypes:
    - Ingress
    - Egress
